public/css/base.css
/* ... */
#search > * + * {
  border-left: none;
  border-radius: 0 10px 10px 0;
}

#search input {
  border-radius: 0;
}

#search input, #search .select {
  border-right: none;
}

#search .select {
  border-radius: 10px 0 0 10px;
}

.editable.editing {
  display: block;
  position: relative;
}
.editable .input {
  display: none;
  background: none;
  border: none;
  outline: solid 2px #aaa;
  width: 100%;
  max-width: 100%;
  resize: none;
  font: inherit;
  color: inherit;
  line-height: inherit;
  text-shadow: inherit;
  padding: 0;
  margin: 0;
}
.editable.short.editing .input {
  width: auto;
}
.editable input.input {
  margin-top: -8px;
  margin-bottom: -3px;
}
.editable.editing .input {
  display: inline;
}
.editable.editing .content {
  display: none;
}
.editable .edit {
  cursor: pointer;
  padding: 3px 5px 3px 5px;
}
.editable.editing .edit {
  position: absolute;
  right: -20px;
  top: 0;
}

.comments {
  min-height: 340px;
  padding: 0;
}
.comments li.comment {
  list-style: none;
  padding-bottom: 10px;
}
.comments li.comment .content:not(.editing) textarea ~ * {
  display: none;
}


.comment {
  min-height: 100px;
}

.comment.deleted, .comment.deleted .content {
  min-height: 0;
}
.comment.deleted .content::before, .comment.deleted .content::after {
  display: none;
}
.comment.deleted .content {
  background: #fee;
  border-color: #a88;
}

.comment .bio {
  float: left;
  padding-right: 20px;
}

.comment .name {
  border-bottom: solid 1px rgba(0,0,150, 0.3);;
  margin-bottom: 10px;
}
.comment .name a {
  text-decoration: none;
  width: 100%;
}
.comment .name > a {
  color: #333333;
}

blockquote {
  background: rgba(0,250,250, 0.3);
  padding: 3px;
  margin: 3px;
  border-radius: 5px;
  border: dotted 1px #eee;
}

.spoiler {
  padding: 1px;
  display: inline-block;
  background: #858585;
  color: #858585;
  text-shadow: none;
}
.spoiler * {
  opacity: 0;
}
.spoiler .img {
  background: #fff;
  position: relative;
  padding: 0;
  margin: 0;
  display: inline-block;
  opacity: 0.1;
}
.spoiler .img::after {
  font-family: 'FontAwesome';
  position: absolute;
  display: block;
  top: 45%;
  left: 0;
  content: '\f071';
  color: #000;
  text-align: center;
  width: 100%;
  line-height: 100%;
  font-size: 40px;
}

.spoiler:hover .img::after, .spoiler.revealed .img::after {
  display: none;
}
.spoiler:hover .img, .spoiler.revealed .img,
.spoiler:hover, .spoiler.revealed {
  text-shadow: inherit;
  color: inherit;
  background: none;
}
.spoiler:hover *, .spoiler.revealed * {
  opacity: 1;
}
.spoiler.revealed {
  background: #e5e5e5;
}

.comment .content {
  transition: background 0.5s ease;
  position: relative;
  padding: 10px;
  margin-left: 70px;
  border: 1px solid rgb(204, 204, 204);
  border-radius: 5px;
  box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.07) inset;
  background: rgb(255, 255, 250);
  text-shadow: 1px 1px rgba(255, 255, 255, 0.8);
  vertical-align: middle;
  min-height: 120px;
}
.comment.basic > .content {
  margin-left: 0;
}
.comment.highlight > .content blockquote {
  background: rgba(0,250,250, 1.3);
}
.comment.highlight > .content {
  border-color: rgb(204,204,255);
  box-shadow: 0 0 12px rgba(0, 0, 255, 0.07) inset,
    0 0 15px -3px rgba(0,0,255,0.3);
}
.comment.highlight > .content::after {
  border-color: transparent #09f9f9 transparent transparent;
}
.comment .content::before {
  content: '';
  display: block;
  position: absolute;
  top: 20px;
  left: -20px;
  border: solid 10px;
  border-color: transparent rgb(204, 204, 204) transparent transparent;
}
.comment .content::after {
  content: '';
  display: block;
  position: absolute;
  top: 20px;
  left: -19px;
  border: solid 10px;
  border-color: transparent rgb(247, 247, 247) transparent transparent;
}
.comment.basic > .content::before, .comment.basic > .content::after {
  display: none;
}

.comment .content .comment-content {
  resize: vertical;
  width: 100%;
  min-height: 120px;
  border: none;
}

.comment .content.editing .preview, .comment .content textarea {
  display: none;
}
.comment .content.editing textarea {
  display: block;
}
.comment .edit-comment, .comment .remove-comment, .comment .reply-comment {
  float: right;
  cursor: pointer;
  margin-left: 5px;
}

.comment .content .posting-spinner {
  display: none;
}
.comment .content.posting button.green {
  position: relative;
}
.comment .content.posting .posting-spinner {
  display: inline;
  width: 100%;
  position: absolute;
  top: 30%;
  left: 0;
}
.comment .content.posting button.green span {
  opacity: 0;
}

.comment .name a.user-link {
  color: #337287;
}
.comment .name a.mention,
.comment a.mention {
  color: #ccc;
  font-size: 8px;
  display: inline-block;
  width: auto;
  padding-right: 3px;
}

.comment .resolution-status {
  border-radius: 5px;
  margin-bottom: 10px;
  box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.07) inset;
}
.comment.closed .resolution-status {
  background: rgb(236, 72, 72);
  border: 1px solid #a73535;
  border-bottom-color: #9d3232;
  border-top-color: #b03838;
  text-shadow: -1px -1px #a73535;
  color: #fff;
}
.comment.resolved .resolution-status {
  background: #7bb042;
  border: 1px solid #699739;
  border-bottom-color: #638f36;
  border-top-color: #6fa03c;
  text-shadow: -1px -1px #699739;
  color: #8f8;
}
.comment.closed .resolution-status .fa-inverse {
  color: rgb(236, 72, 72);
}
.comment.resolved .resolution-status .fa-inverse {
  color: #7bb042;
}

ul.notifications {
  list-style: none;
  padding: 20px;
}
.notification {
  border: solid 1px rgba(0,0,0,0.1);
}
.notification + .notification {
  border-top: none;
}
.notification a {
  display: block;
  padding: 10px;
  text-decoration: none;
  font-weight: initial;
}
.notification:hover {
  background: rgb(250,250,250);
}
.notification.unread {
  background: rgba(200,250,200,0.6);
}
.notification::before {
  font: normal normal normal 14px/1 FontAwesome;
  display: block;
  float: left;
  padding: 10px;
  color: #337287;
}
/* ... */

